# rick_and_morty_data_pipeline

./: .gitignore  .pre-commit-config.yaml  README.md  flows.py  pyproject.toml
api/: api.py
tasks/: prefect_tasks.py
tests/: test_api.py  test_tasks.py
